chore: update Reactive packages

--- a/reference/Counter/XAML-MVUX/Counter/MainPage.xaml
+++ b/reference/Counter/XAML-MVUX/Counter/MainPage.xaml
@@ -32,7 +32,7 @@
 		<Button
 			Margin="12"
 			HorizontalAlignment="Center"
-			Command="{Binding IncrementCommand}"
+			Command="{Binding IncrementCounter}"
 			Content="Increment Counter by Step Size" />
 	</StackPanel>
 </Page>
