--- a/reference/Counter/XAML-MVUX/Counter/MainPage.xaml
+++ b/reference/Counter/XAML-MVUX/Counter/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿﻿<Page
 	x:Class="Counter.MainPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -19,20 +19,20 @@
 			Margin="12"
 			HorizontalAlignment="Center"
 			PlaceholderText="Step Size"
-			Text="{Binding Step, Mode=TwoWay}"
+			Text="{Binding Countable.Step, Mode=TwoWay}"
 			TextAlignment="Center" />
 
 		<TextBlock
 			Margin="12"
 			HorizontalAlignment="Center"
 			TextAlignment="Center">
-			<Run Text="Counter: " /><Run Text="{Binding Count}" />
+			<Run Text="Counter: " /><Run Text="{Binding Countable.Count}" />
 		</TextBlock>
 
 		<Button
 			Margin="12"
 			HorizontalAlignment="Center"
-			Command="{Binding IncrementCommand}"
+			Command="{Binding IncrementCounter}"
 			Content="Increment Counter by Step Size" />
 	</StackPanel>
 </Page>
