chore: fixing build

--- a/reference/ToDo/src/ToDo/Views/Dialogs/AddListFlyout.xaml
+++ b/reference/ToDo/src/ToDo/Views/Dialogs/AddListFlyout.xaml
@@ -6,7 +6,7 @@
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	  xmlns:utu="using:Uno.Toolkit.UI"
-	  xmlns:um="using:Uno.Material"
+	  xmlns:ut="using:Uno.Themes"
 	  mc:Ignorable="d"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -50,9 +50,9 @@
 					utu:AutoLayout.CounterAlignment="Start"
 					IsEnabled="{Binding ElementName=ListNameText, Path=Text, Converter={StaticResource IsNotNullNorWhitespace}}"
 					Style="{StaticResource FilledButtonStyle}">
-				<um:ControlExtensions.Icon>
+				<ut:ControlExtensions.Icon>
 					<PathIcon Data="{StaticResource Icon_Add}" />
-				</um:ControlExtensions.Icon>
+				</ut:ControlExtensions.Icon>
 			</Button>
 
 		</utu:AutoLayout>
