--- a/reference/ToDo/src/ToDo/Views/HomePage.xaml
+++ b/reference/ToDo/src/ToDo/Views/HomePage.xaml
@@ -8,7 +8,7 @@
 	  xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	  xmlns:uer="using:Uno.Extensions.Reactive.UI"
-	  xmlns:um="using:Uno.Material"
+	  xmlns:ut="using:Uno.Themes"
 	  xmlns:uut="using:Uno.UI.Toolkit"
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  xmlns:not_win="http://uno.ui/not_win"
@@ -129,9 +129,9 @@
 							HorizontalAlignment="Stretch"
 							HorizontalContentAlignment="Left"
 							Style="{StaticResource TextButtonStyle}">
-						<um:ControlExtensions.Icon>
+						<ut:ControlExtensions.Icon>
 							<PathIcon Data="{StaticResource Icon_Add}" />
-						</um:ControlExtensions.Icon>
+						</ut:ControlExtensions.Icon>
 					</Button>
 				</Border>
 			</muxc:NavigationView.PaneFooter>
