--- a/reference/ToDo/src/ToDo/Views/TaskListPage.xaml
+++ b/reference/ToDo/src/ToDo/Views/TaskListPage.xaml
@@ -9,7 +9,7 @@
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	  xmlns:uer="using:Uno.Extensions.Reactive.UI"
 	  xmlns:utu="using:Uno.Toolkit.UI"
-	  xmlns:um="using:Uno.Material"
+	  xmlns:ut="using:Uno.Themes"
 	  mc:Ignorable="d"
 	  NavigationCacheMode="Required">
 
@@ -106,9 +106,9 @@
 													<ToggleButton.Content>
 														<PathIcon Foreground="{StaticResource OnSurfaceLowBrush}" Data="{StaticResource Icon_Star_Rate}" />
 													</ToggleButton.Content>
-													<um:ControlExtensions.AlternateContent>
+													<ut:ControlExtensions.AlternateContent>
 														<PathIcon Foreground="{StaticResource ErrorBrush}" Data="{StaticResource Icon_Star_Rate}" />
-													</um:ControlExtensions.AlternateContent>
+													</ut:ControlExtensions.AlternateContent>
 												</ToggleButton>
 											</utu:AutoLayout>
 										</utu:AutoLayout>
@@ -279,9 +279,9 @@
 							Foreground="{StaticResource OnPrimaryBrush}"
 							Background="{StaticResource OnSurfaceFocusedBrush}"
 							Style="{StaticResource TextButtonStyle}">
-						<um:ControlExtensions.Icon>
+						<ut:ControlExtensions.Icon>
 							<PathIcon Data="{StaticResource Icon_Add}" />
-						</um:ControlExtensions.Icon>
+						</ut:ControlExtensions.Icon>
 					</Button>
 				</utu:AutoLayout>
 			</utu:AutoLayout>
