--- a/reference/ToDo/src/ToDo/Views/SearchPage.xaml
+++ b/reference/ToDo/src/ToDo/Views/SearchPage.xaml
@@ -8,7 +8,7 @@
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	  xmlns:uer="using:Uno.Extensions.Reactive.UI"
 	  xmlns:utu="using:Uno.Toolkit.UI"
-	  xmlns:um="using:Uno.Material"
+	  xmlns:ut="using:Uno.Themes"
 	  mc:Ignorable="d"
 	  Background="{ThemeResource BackgroundBrush}">
 
@@ -111,10 +111,10 @@
 																	<PathIcon Foreground="{StaticResource OnSurfaceLowBrush}"
 																			  Data="{StaticResource Icon_Star_Rate}" />
 																</ToggleButton.Content>
-																<um:ControlExtensions.AlternateContent>
+																<ut:ControlExtensions.AlternateContent>
 																	<PathIcon Foreground="{StaticResource ErrorBrush}"
 																			  Data="{StaticResource Icon_Star_Rate}" />
-																</um:ControlExtensions.AlternateContent>
+																</ut:ControlExtensions.AlternateContent>
 															</ToggleButton>
 														</utu:AutoLayout>
 													</utu:AutoLayout>
