fix: color fixes

--- a/reference/Commerce/src/Commerce/App.xaml
+++ b/reference/Commerce/src/Commerce/App.xaml
@@ -21,6 +21,7 @@
             </ResourceDictionary>
           </utum:MaterialToolkitTheme.FontOverrideDictionary> -->
         </utum:MaterialToolkitTheme>
+        <ResourceDictionary Source="ms-appx:///Styles/NavigationBar.xaml" />
       </ResourceDictionary.MergedDictionaries>
       <x:Double x:Key="LandscapeMaxPageWidth">500</x:Double>
     </ResourceDictionary>
