--- a/reference/Commerce/src/Commerce/Views/HomePage.xaml
+++ b/reference/Commerce/src/Commerce/Views/HomePage.xaml
@@ -10,6 +10,8 @@
 	  xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
 	  mc:Ignorable="d"
 	  NavigationCacheMode="Required"
+      utu:StatusBar.Background="{ThemeResource PrimaryBrush}"
+      utu:StatusBar.Foreground="AutoInverse"
 	  Background="{ThemeResource BackgroundBrush}">
 
 	<Page.Resources>
