--- a/reference/Commerce/src/Commerce/Styles/NavigationBar.xaml
+++ b/reference/Commerce/src/Commerce/Styles/NavigationBar.xaml
@@ -1,25 +1,23 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:utu="using:Uno.Toolkit.UI">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+					xmlns:utu="using:Uno.Toolkit.UI">
 
-    <Style
-        x:Key="RootModalMainCommandStyle"
-        BasedOn="{StaticResource ModalMainCommandStyle}"
-        TargetType="AppBarButton">
-        <Setter Property="Foreground" Value="{ThemeResource MaterialOnPrimaryMediumBrush}" />
-        <Setter Property="Icon">
-            <Setter.Value>
-                <BitmapIcon UriSource="ms-appx:///Assets/Icons/close.png" />
-            </Setter.Value>
-        </Setter>
-    </Style>
+	<Style x:Key="PrimaryAppBarButtonStyle"
+		   BasedOn="{StaticResource MaterialAppBarButtonStyle}"
+		   TargetType="AppBarButton">
+		<Setter Property="Foreground" Value="{ThemeResource OnPrimaryBrush}" />
+	</Style>
 
-    <Style
-        x:Key="RootModalNavigationBarStyle"
-        BasedOn="{StaticResource ModalNavigationBarStyle}"
-        TargetType="utu:NavigationBar">
-        <Setter Property="MainCommandStyle" Value="{StaticResource RootModalMainCommandStyle}" />
-    </Style>
+	<Style x:Key="PrimaryNavigationBarStyle"
+		   BasedOn="{StaticResource MaterialNavigationBarStyle}"
+		   TargetType="utu:NavigationBar">
+		<Setter Property="Background" Value="{ThemeResource PrimaryBrush}" />
+		<Setter Property="Foreground" Value="{ThemeResource OnPrimaryBrush}" />
+	</Style>
+
+	<Style TargetType="utu:NavigationBar"
+		   BasedOn="{StaticResource PrimaryNavigationBarStyle}" />
+	<Style TargetType="AppBarButton"
+		   BasedOn="{StaticResource PrimaryAppBarButtonStyle}" />
 </ResourceDictionary>
