--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp.MauiControls/EmbeddedControl.xaml
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp.MauiControls/EmbeddedControl.xaml
@@ -1,40 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiCommunityToolkitApp.MauiControls.EmbeddedControl"
-             HorizontalOptions="Fill"
-             VerticalOptions="Fill">
-  <VerticalStackLayout
-    Spacing="25"
-    Padding="30,0"
-    VerticalOptions="Center">
-
-    <Image
-      BindingContext="Assets/Images/dotnet_bot.png"
-      Source="{Binding Converter={StaticResource UnoImageConverter}}"
-      SemanticProperties.Description="Cute dot net bot waving hi to you!"
-      HeightRequest="200"
-      HorizontalOptions="Center" />
-
-    <Label
-      Text="Hello, World!"
-      SemanticProperties.HeadingLevel="Level1"
-      FontSize="32"
-      HorizontalOptions="Center" />
-
-    <Label
-      Text="Welcome to .NET Multi-platform App UI"
-      SemanticProperties.HeadingLevel="Level2"
-      SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-      FontSize="18"
-      HorizontalOptions="Center" />
-
-    <Button
-      x:Name="CounterButton"
-      Text="Press Me"
-      SemanticProperties.Hint="Counts the number of times you click"
-      Clicked="CounterClicked"
-      HorizontalOptions="Center" />
-
-  </VerticalStackLayout>
+<ContentView
+    x:Class="MauiCommunityToolkitApp.MauiControls.EmbeddedControl"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    HorizontalOptions="Fill"
+    VerticalOptions="Fill">
+    <toolkit:DrawingView
+        IsMultiLineModeEnabled="{Binding IsMultiLineModeEnabled}"
+        LineColor="Fuchsia"
+        LineWidth="5"
+        ShouldClearOnFinish="{Binding ShouldCleanOnFinish}" />
 </ContentView>
