--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp/Presentation/MainPage.xaml
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp/Presentation/MainPage.xaml
@@ -1,55 +1,55 @@
-﻿<Page
+<Page
     x:Class="MauiCommunityToolkitApp.Presentation.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:MauiCommunityToolkitApp.MauiControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:MauiCommunityToolkitApp.Presentation"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uen="using:Uno.Extensions.Navigation.UI"
-    xmlns:utu="using:Uno.Toolkit.UI"
+    xmlns:controls="using:MauiCommunityToolkitApp.MauiControls"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     NavigationCacheMode="Required"
+	xmlns:utu="using:Uno.Toolkit.UI"
     mc:Ignorable="d">
 
-  <Grid utu:SafeArea.Insets="All">
-    <NavigationView uen:Region.Attached="True">
-      <NavigationView.MenuItems>
-        <NavigationViewItem uen:Region.Name="Avatar" Content="Avatar" />
-        <NavigationViewItem uen:Region.Name="DrawingView" Content="DrawingView" />
-        <NavigationViewItem uen:Region.Name="Expander" Content="Expander" />
-        <NavigationViewItem uen:Region.Name="Toast" Content="Toast" />
-        <NavigationViewItem uen:Region.Name="Snackbar" Content="Snackbar" />
-      </NavigationView.MenuItems>
-      <Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility">
-        <embed:MauiHost
+    <Grid utu:SafeArea.Insets="All">
+        <NavigationView uen:Region.Attached="True">
+            <NavigationView.MenuItems>
+                <NavigationViewItem uen:Region.Name="Avatar" Content="Avatar" />
+                <NavigationViewItem uen:Region.Name="DrawingView" Content="DrawingView" />
+                <NavigationViewItem uen:Region.Name="Expander" Content="Expander" />
+                <NavigationViewItem uen:Region.Name="Toast" Content="Toast" />
+                <NavigationViewItem uen:Region.Name="Snackbar" Content="Snackbar" />
+            </NavigationView.MenuItems>
+            <Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility">
+                <embed:MauiHost
                     xmlns:embed="using:Uno.Extensions.Maui"
                     uen:Region.Name="Avatar"
                     Source="controls:AvatarControl"
                     Visibility="Collapsed" />
-        <local:DrawingViewContent uen:Region.Name="DrawingView" Visibility="Collapsed" />
-        <embed:MauiHost
+                <local:DrawingViewContent uen:Region.Name="DrawingView" Visibility="Collapsed" />
+                <embed:MauiHost
                     xmlns:embed="using:Uno.Extensions.Maui"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     uen:Region.Name="Expander"
                     Source="controls:ExpanderControl"
                     Visibility="Collapsed" />
-        <embed:MauiHost
+                <embed:MauiHost
                     xmlns:embed="using:Uno.Extensions.Maui"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     uen:Region.Name="Toast"
                     Source="controls:ToastControl"
                     Visibility="Collapsed" />
-        <embed:MauiHost
+                <embed:MauiHost
                     xmlns:embed="using:Uno.Extensions.Maui"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     uen:Region.Name="Snackbar"
                     Source="controls:SnackbarControl"
                     Visibility="Collapsed" />
-      </Grid>
-    </NavigationView>
-  </Grid>
+            </Grid>
+        </NavigationView>
+    </Grid>
 </Page>
