fix: brushes to match figma

--- a/reference/ToDo/src/ToDo/Views/Dialogs/SettingsFlyout.xaml
+++ b/reference/ToDo/src/ToDo/Views/Dialogs/SettingsFlyout.xaml
@@ -68,7 +68,7 @@
 						<Button x:Uid="SettingsFlyout_SignOutButton"
 								Content="sign out"
 								Command="{Binding SignOut}"
-								Foreground="{StaticResource ErrorBrush}"
+								Foreground="{ThemeResource ErrorBrush}"
 								Style="{StaticResource TextButtonStyle}" />
 					</utu:AutoLayout>
 					<utu:AutoLayout Padding="20,0,20,0"
