--- a/reference/ToDo/src/ToDo/Views/HomePage.xaml
+++ b/reference/ToDo/src/ToDo/Views/HomePage.xaml
@@ -12,7 +12,7 @@
 	  xmlns:uut="using:Uno.UI.Toolkit"
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  xmlns:not_win="http://uno.ui/not_win"
-	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	  Background="{ThemeResource BackgroundBrush}"
 	  mc:Ignorable="d not_win">
 
 	<Page.Resources>
