--- a/reference/ToDo/src/ToDo/Views/TaskPage.xaml
+++ b/reference/ToDo/src/ToDo/Views/TaskPage.xaml
@@ -60,11 +60,11 @@
 									  Command="{Binding ToggleIsImportant}"
 									  CommandParameter="{Binding}">
 							<ToggleButton.Content>
-								<PathIcon Foreground="{StaticResource OnSurfaceLowBrush}"
+								<PathIcon Foreground="{ThemeResource OnSurfaceLowBrush}"
 										  Data="{StaticResource Icon_Star_Rate}" />
 							</ToggleButton.Content>
 							<ut:ControlExtensions.AlternateContent>
-								<PathIcon Foreground="{StaticResource ErrorBrush}"
+								<PathIcon Foreground="{ThemeResource ErrorBrush}"
 										  Data="{StaticResource Icon_Star_Rate}" />
 							</ut:ControlExtensions.AlternateContent>
 						</ToggleButton>
