--- a/reference/ToDo/src/ToDo/Views/WelcomePage.xaml
+++ b/reference/ToDo/src/ToDo/Views/WelcomePage.xaml
@@ -54,13 +54,13 @@
 			</utu:AutoLayout>
 			<utu:AutoLayout Spacing="20"
 							Padding="0,40,0,40">
-				<TextBlock Foreground="{ThemeResource OnSecondaryMediumBrush}"
+				<TextBlock Foreground="{ThemeResource OnSurfaceBrush}"
 						   TextAlignment="Center"
 						   TextWrapping="Wrap"
 						   Text="Welcome to&#xA;Uno To Do!"
 						   Style="{StaticResource HeadlineSmall}"
 						   x:Uid="WelcomePage_Welcome" />
-				<TextBlock Foreground="{StaticResource PrimaryVariantLightBrush}"
+				<TextBlock Foreground="{ThemeResource PrimaryVariantLightBrush}"
 						   TextAlignment="Center"
 						   TextWrapping="Wrap"
 						   Text="Start using the best to-do app"
@@ -94,12 +94,12 @@
 									utu:AutoLayout.CounterAlignment="Start"
 									utu:AutoLayout.CounterLength="340">
 						<TextBlock x:Uid="WelcomePage_Welcome"
-								   Foreground="{ThemeResource OnSecondaryMediumBrush}"
+								   Foreground="{ThemeResource OnSurfaceBrush}"
 								   TextWrapping="Wrap"
 								   Text="Welcome to&#xA;Uno To Do!"
 								   Style="{StaticResource HeadlineLarge}" />
 						<TextBlock x:Uid="WelcomePage_Line2"
-								   Foreground="{StaticResource PrimaryVariantLightBrush}"
+								   Foreground="{ThemeResource PrimaryVariantLightBrush}"
 								   TextWrapping="Wrap"
 								   Text="Start using the best to-do app, you can&#xA;create and manage your to-do lists to improve your organization."
 								   Style="{StaticResource TitleMedium}" />
