--- a/reference/ToDo/src/ToDo/Views/Dialogs/AddListFlyout.xaml
+++ b/reference/ToDo/src/ToDo/Views/Dialogs/AddListFlyout.xaml
@@ -8,7 +8,7 @@
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  xmlns:ut="using:Uno.Themes"
 	  mc:Ignorable="d"
-	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	  Background="{ThemeResource BackgroundBrush}">
 
 	<Page.Resources>
 		<x:String x:Key="Icon_Add">F1 M 14 8 L 8 8 L 8 14 L 6 14 L 6 8 L 0 8 L 0 6 L 6 6 L 6 0 L 8 0 L 8 6 L 14 6 L 14 8 Z</x:String>
