--- a/reference/ToDo/src/ToDo/Views/SearchPage.xaml
+++ b/reference/ToDo/src/ToDo/Views/SearchPage.xaml
@@ -108,11 +108,11 @@
 																		  utu:AutoLayout.CounterAlignment="Start"
 																		  Style="{StaticResource IconToggleButtonStyle}">
 																<ToggleButton.Content>
-																	<PathIcon Foreground="{StaticResource OnSurfaceLowBrush}"
+																	<PathIcon Foreground="{ThemeResource OnSurfaceLowBrush}"
 																			  Data="{StaticResource Icon_Star_Rate}" />
 																</ToggleButton.Content>
 																<ut:ControlExtensions.AlternateContent>
-																	<PathIcon Foreground="{StaticResource ErrorBrush}"
+																	<PathIcon Foreground="{ThemeResource ErrorBrush}"
 																			  Data="{StaticResource Icon_Star_Rate}" />
 																</ut:ControlExtensions.AlternateContent>
 															</ToggleButton>
