chore: Add additional information on how to test the sample with the DevExpress NuGet Feed URL

--- a/UI/MauiEmbedding/DevExpressApp/src/DevExpressApp.MauiControls/ChartViewControl.xaml
+++ b/UI/MauiEmbedding/DevExpressApp/src/DevExpressApp.MauiControls/ChartViewControl.xaml
@@ -3,7 +3,12 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:dxc="clr-namespace:DevExpress.Maui.Charts;assembly=DevExpress.Maui.Charts"
             x:Class="DevExpressApp.MauiControls.ChartViewControl">
-  <dxc:ChartView>
+  <!-- =============================================================== -->
+  <!-- ===== IMPORTANT: TODO: Uncomment to test the DevExpressApp ==== -->
+  <!-- ===== after you added the DevExpress NuGet Feed URL =========== -->
+  <!-- ===== (https://nuget.devexpress.com/#feed-url) ================ -->
+  <!-- =============================================================== -->
+  <!--<dxc:ChartView>
     <dxc:ChartView.Series>
       <dxc:LineSeries DisplayName="{Binding GdpValueForUSA.CountryName}">
         <dxc:LineSeries.Data>
@@ -35,5 +40,5 @@
         </dxc:LineSeries.Data>
       </dxc:LineSeries>
     </dxc:ChartView.Series>
-  </dxc:ChartView>
+  </dxc:ChartView>-->
 </ScrollView>
