feat: GrialKit single project migration

--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarChartSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarChartSample.xaml
@@ -9,7 +9,7 @@
 
 		<Label Text="BarChart (Search for TODO and uncomment code)" />
 		<!-- TODO: Uncomment -->
-		<!--<grial:HorizontalBarChart
+		<grial:HorizontalBarChart
             x:Name="chart1"
             AxisFontColor="DarkGray"
             AxisLinesColor="#E0E3EC"
@@ -66,7 +66,7 @@
                 CornerRadius="8"
             />
 
-        </grial:BarChart>-->
+        </grial:BarChart>
 
         <local:SwitchOption x:Name="toggleLabelsSwitch" Label="Toggle Labels" />
         <local:SwitchOption x:Name="toggleHorizontalLinesSwich" Label="Toggle Reference Axis" />
