--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarMultiSeriesSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarMultiSeriesSample.xaml
@@ -9,7 +9,7 @@
 
 		<Label Text="BarMultiSeries (Search for TODO and uncomment code)" />
 		<!-- TODO: Uncomment -->
-		<!--<grial:CategoryChart
+    <grial:CategoryChart
             x:Name="chart"
             Grid.Row="1"
             Margin="-20,0,-10,0"
@@ -29,7 +29,7 @@
             LabelFontSize="9"
             ValueLabelFontColor="Gray">
 
-            <grial:BarSeries
+      <grial:BarSeries
                 CornerRadius="20"
                 IsStacked="False"
                 ItemsSource="{ Binding FirstSeries }"
@@ -38,7 +38,7 @@
                 ValuePath="Value"
                 Color="#46C771"
             />
-            <grial:BarSeries
+      <grial:BarSeries
                 CornerRadius="20"
                 IsStacked="False"
                 ItemsSource="{ Binding SecondSeries }"
@@ -48,7 +48,7 @@
                 Color="#B176FD"
             />
 
-        </grial:CategoryChart>-->
+    </grial:CategoryChart>
 
-    </VerticalStackLayout>
+  </VerticalStackLayout>
 </ContentPage>
