--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/LineChartSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/LineChartSample.xaml
@@ -10,7 +10,7 @@
 		<Label Text="LineChart (Search for TODO and uncomment code)" />
 		<!-- TODO: Uncomment -->
 
-		<!--<grial:CategoryChart
+    <grial:CategoryChart
             x:Name="chart"
             HeightRequest="100"
             LabelFontColor="Gray"
@@ -21,7 +21,7 @@
             DisplayReferenceGridLines="False"
             DisplayValuesGridLines="True"
             BackgroundColor="Transparent">
-            <grial:LineSeries
+      <grial:LineSeries
                 ItemsSource="{ Binding . }"
                 Color="#3F75FF"
                 LineStrokeSize="2"
@@ -29,9 +29,9 @@
                 ValuePath="Value"
                 LabelPath="Label"
             />
-        </grial:CategoryChart>-->
+    </grial:CategoryChart>
 
-        <local:SwitchOption x:Name="toggleLabelsSwitch" Label="Toggle Labels" />
+    <local:SwitchOption x:Name="toggleLabelsSwitch" Label="Toggle Labels" />
         <local:SwitchOption x:Name="toggleHorizontalLinesSwich" Label="Toggle Reference Axis" />
         <local:SwitchOption x:Name="toggleVerticalLinesSwich" Label="Toggle Values Axis" />
 
