--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/AreaChartSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/AreaChartSample.xaml
@@ -34,7 +34,7 @@
     <VerticalStackLayout Padding="30" Spacing="20">
 		<Label Text="CategoryChart (Search for TODO and uncomment code)" />
 		<!-- TODO: Uncomment -->
-        <!--<grial:CategoryChart
+        <grial:CategoryChart
             x:Name="chart"
             AxisFontColor="Gray"
             AxisLinesColor="#E0E3EC"
@@ -77,16 +77,16 @@
 
         </grial:CategoryChart>
 
-        <grial:MultiSeriesLegend
+    <grial:MultiSeriesLegend
             x:Name="AreaChartLegend"
             HeightRequest="40"
             ItemTemplate="{ StaticResource ChartLegendTemplate }">
 
-            <grial:MultiSeriesLegend.ItemsLayout>
-                <LinearItemsLayout Orientation="Horizontal" />
-            </grial:MultiSeriesLegend.ItemsLayout>
+      <grial:MultiSeriesLegend.ItemsLayout>
+        <LinearItemsLayout Orientation="Horizontal" />
+      </grial:MultiSeriesLegend.ItemsLayout>
 
-        </grial:MultiSeriesLegend>-->
+    </grial:MultiSeriesLegend>
 
-    </VerticalStackLayout>
+  </VerticalStackLayout>
 </ContentPage>
