chore: clean up

--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/AreaChartSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/AreaChartSample.xaml
@@ -32,8 +32,7 @@
 
     </ContentPage.Resources>
     <VerticalStackLayout Padding="30" Spacing="20">
-		<Label Text="CategoryChart (Search for TODO and uncomment code)" />
-		<!-- TODO: Uncomment -->
+		<Label Text="CategoryChart" />
         <grial:CategoryChart
             x:Name="chart"
             AxisFontColor="Gray"
