--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarChartSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarChartSample.xaml
@@ -7,8 +7,7 @@
              Title="BarChartSample">
     <VerticalStackLayout Padding="30" Spacing="20">
 
-		<Label Text="BarChart (Search for TODO and uncomment code)" />
-		<!-- TODO: Uncomment -->
+		<Label Text="BarChart" />
 		<grial:HorizontalBarChart
             x:Name="chart1"
             AxisFontColor="DarkGray"
