--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarMultiSeriesSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarMultiSeriesSample.xaml
@@ -7,8 +7,7 @@
              Title="BarMultiSeriesSample">
     <VerticalStackLayout Padding="30" Spacing="20">
 
-		<Label Text="BarMultiSeries (Search for TODO and uncomment code)" />
-		<!-- TODO: Uncomment -->
+		<Label Text="BarMultiSeries" />
     <grial:CategoryChart
             x:Name="chart"
             Grid.Row="1"
