--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/LineChartSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/LineChartSample.xaml
@@ -7,9 +7,7 @@
              Title="LineChartSample">
     <VerticalStackLayout Padding="30" Spacing="20">
 
-		<Label Text="LineChart (Search for TODO and uncomment code)" />
-		<!-- TODO: Uncomment -->
-
+		<Label Text="LineChart" />
     <grial:CategoryChart
             x:Name="chart"
             HeightRequest="100"
