--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/PieChartSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/PieChartSample.xaml
@@ -5,8 +5,8 @@
              xmlns:grial="http://uxdivers.com/grial"
              Title="PieChartSample">
  <ContentPage.Resources>
-		<!-- TODO: Uncomment -->
-    <grial:ChartTheme x:Key="PieTheme">
+
+   <grial:ChartTheme x:Key="PieTheme">
       <SolidColorBrush Color="#F9B300" />
       <SolidColorBrush Color="#FF602E" />
       <SolidColorBrush Color="#B146C2" />
@@ -18,8 +18,7 @@
 
     <VerticalStackLayout Padding="30">
 
-		<Label Text="PieChart (Search for TODO and uncomment code)" />
-		<!-- TODO: Uncomment -->
+		<Label Text="PieChart" />
     <grial:PieChart
             x:Name="chart"
             HeightRequest="400"
